# McDoner

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_CHINESE.md  build.bat  build.sh  main.cpp  testing.cpp
docs/: futurePlan.md  mainChanges.txt  updates.md
libs/imgui/backends/: imgui_impl_glfw.cpp
saves/demo/: demo.txt  demo_backup.txt
src/export/: ExportWriter.cpp  ExportWriter.hpp
src/export/preWriter/: CMakeLists.txt  SaveInfo.hpp  build.sh  main.cpp
src/settings/: buttonInterface.txt  imguiWindowLayout.json  keyLoad.json
src/structures/: Backup.h  Backup.hpp  Button.h  Button.hpp  ButtonInterface.cpp  ButtonInterface.h  ButtonInterface.hpp  Cast.cpp  Cast.h  Cast.hpp  Cast.tpp  Data.cpp  Data.h  Data.hpp  Library.hpp  OtherPage.h  Page.cpp  Page.h  Page.hpp  Page.tpp  Spirit.h  Spirit.hpp  Textbox.h  Textbox.hpp  Tools.cpp  Tools.h  Tools.hpp  Tools.tpp
